Fixed initial styles of BrandsSkeleton for too small media.

--- a/src/components/Skeleton/BrandsSkeleton/styles.module.css
+++ b/src/components/Skeleton/BrandsSkeleton/styles.module.css
@@ -48,7 +48,7 @@
   border-radius: 10px;
 }
 
-.brand:nth-child(n + 9) {
+.brand:nth-child(-n + 13) {
   display: none;
 }
 
